# ai-anime-recommender

./: .gitignore  README.md  llmops-k8s.yaml  pyproject.toml  setup.py
app/: app.py
config/: config.py
data/: anime_updated.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  recommender.py  vector_store.py
utils/: logger.py
